--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- PWA Meta Tags -->
+    <title>WReddit - Modern Reddit Client</title>
+    <meta
+      name="description"
+      content="A modern, fast Reddit client built with React. Browse Reddit with a clean, mobile-friendly interface."
+    />
+    <meta name="theme-color" content="#ea580c" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="WReddit" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="/" />
+    <meta property="og:title" content="WReddit - Modern Reddit Client" />
+    <meta
+      property="og:description"
+      content="A modern, fast Reddit client built with React. Browse Reddit with a clean, mobile-friendly interface."
+    />
+    <meta property="og:image" content="/pwa-512x512.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="/" />
+    <meta property="twitter:title" content="WReddit - Modern Reddit Client" />
+    <meta
+      property="twitter:description"
+      content="A modern, fast Reddit client built with React. Browse Reddit with a clean, mobile-friendly interface."
+    />
+    <meta property="twitter:image" content="/pwa-512x512.png" />
   </head>
   <body>
     <div id="root"></div>
